# photos-backend

./: .dockerignore  .gitignore  ALBUM_ARCH.md  Cargo.toml  Dockerfile  README.md  SIMPLE_ALBUM_ARCH.md  TODO.md  api.Dockerfile  compose.yml  example.env  generate-migrations.ps1  justfile  out-PICT0002.JPG.json  out-PICT0016.JPG.json  out-PICT0017.JPG.json  out-cat-pet.jpg.json  out-jellyfish.mp4.json  out-road.jpg.json  out-sunset.jpg.json  out-tree.jpg.json  watcher.Dockerfile  worker.Dockerfile
crates/api/: Cargo.toml  build.rs
crates/api/src/: main.rs  pb.rs
crates/api/src/routes/: mod.rs  scalar_config.rs
crates/api/src/routes/auth/: db_model.rs  error.rs  handlers.rs  hashing.rs  interfaces.rs  middleware.rs  mod.rs  model.rs  route.rs  service.rs  structs.rs  token.rs
crates/api/src/routes/download/: error.rs  handlers.rs  interfaces.rs  service.rs
crates/api/src/routes/photos/: error.rs  handlers.rs  interfaces.rs  service.rs
crates/api/src/routes/root/: route.rs
crates/api/src/routes/setup/: error.rs  handlers.rs  helpers.rs  interfaces.rs  mod.rs  service.rs
crates/apps/api/: Cargo.toml
crates/apps/api/src/: api_state.rs  lib.rs  main.rs  server.rs
crates/apps/tasks/: Cargo.toml
crates/apps/tasks/src/: lib.rs  main.rs  task_runner.rs
crates/apps/watcher/: Cargo.toml
crates/apps/watcher/src/: handlers.rs  lib.rs  main.rs  watcher.rs
crates/apps/worker/: Cargo.toml
crates/apps/worker/examples/: auto_do_setup.rs  cluster_faces.rs  cluster_photos.rs  create_users_start_processing.rs  sample_photos.rs  seed_db.rs  umap_photo_clusters.rs  umap_photo_grid.rs  umap_photos.rs
crates/apps/worker/src/: context.rs  lib.rs  main.rs  worker.rs
crates/binaries/api/: Cargo.toml
crates/binaries/api/src/: api_state.rs  main.rs
crates/common_photos/: Cargo.toml
crates/common_photos/src/: db_model.rs  lib.rs  queue.rs  read_model.rs  utils.rs
crates/common_photos/src/config/: get_config.rs  mod.rs  structs.rs
crates/common_photos/src/queue/: enqueue_job.rs  mod.rs  structs.rs
crates/common_photos/src/settings/: get_settings.rs  mod.rs  structs.rs
crates/libs/app_state/: Cargo.toml
crates/libs/app_state/src/: constants.rs  lib.rs  load_constants.rs  load_settings.rs  raw_settings.rs  settings.rs  utils.rs
crates/libs/common_photos/: Cargo.toml
crates/libs/common_photos/src/: common_interfaces.rs  db_model.rs  lib.rs  utils.rs
crates/libs/common_services/: Cargo.toml
crates/libs/common_services/benches/: system_bench.rs  timeline_benchmark.rs
crates/libs/common_services/examples/: create_users.rs  run_search.rs
crates/libs/common_services/src/: caching.rs  get_settings.rs  job_queue.rs  lib.rs  s2s_client.rs  utils.rs
crates/libs/common_types/: Cargo.toml  build.rs
crates/libs/common_types/proto/: timeline.proto
crates/libs/common_types/src/: constants.rs  dev_constants.rs  lib.rs  ml_analysis.rs  ml_analysis_types.rs  pb.rs  settings.rs  variant.rs  worker_payload.rs
crates/libs/generate_thumbnails/: Cargo.toml
crates/libs/generate_thumbnails/examples/: gen_photo_thumbs.rs  gen_video_thumbs.rs  generate_thumbnails.rs
crates/libs/generate_thumbnails/src/: ffmpeg.rs  lib.rs  pano.rs  photo.rs  utils.rs  video.rs
crates/libs/language_model/: Cargo.toml
crates/libs/language_model/examples/: call_llm.rs
crates/libs/language_model/src/: api.rs  lib.rs
crates/libs/ml_analysis/: Cargo.toml
crates/libs/ml_analysis/examples/: run_caption.rs  run_color_data.rs  run_ocr.rs  run_py_interop.rs  run_quality_data.rs  run_quality_judge.rs  run_quality_measure.rs  run_visual_analysis.rs
crates/libs/ml_analysis/py_ml/: py_analyze.py  pyproject.toml
crates/libs/ml_analysis/src/: caption_data.rs  chat_types.rs  classify.rs  color_data.rs  lib.rs  py_interop.rs  quality_data.rs  quality_judge.rs  quality_measure.rs  structs.rs  utils.rs  visual_analyzer.rs
crates/ml_analysis/: Cargo.toml
crates/ml_analysis/examples/: run_analyzer.rs  run_color_data.rs  run_py_interop.rs  run_quality_data.rs  run_visual_analysis.rs
crates/ml_analysis/py_ml/: py_analyze.py  pyproject.toml
crates/ml_analysis/src/: caption_data.rs  color_data.rs  lib.rs  py_interop.rs  quality_data.rs  structs.rs  utils.rs  visual_analyzer.rs
crates/photos_core/: Cargo.toml
crates/photos_core/src/: common_database.rs  config.rs  lib.rs  queue.rs  read_model.rs  remove_file.rs  utils.rs  write_to_db.rs
crates/photos_indexer/: Cargo.toml
crates/photos_indexer/src/: main.rs  scan_all.rs
crates/photos_indexer/src/database/: insert_media_item.rs  macros.rs  mod.rs  read_model.rs  utils.rs
crates/photos_indexer/src/indexer/: mod.rs  process_file.rs  scan_all.rs  watcher.rs
crates/photos_worker/: Cargo.toml
crates/photos_worker/src/: ingest_file.rs  main.rs  process_file.rs  queue_logic.rs  remove_file.rs
crates/photos_worker/src/db_helpers/: macros.rs  mod.rs  write_to_db.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: clean_db.rs  main.rs  scan_all.rs
crates/test_integration/: Cargo.toml
crates/test_integration/assets/: settings.yaml
crates/test_integration/src/: lib.rs  main.rs  test_constants.rs  test_context.rs  test_helpers.rs  tests.rs  utils.rs
crates/test_integration/src/helpers/: mod.rs  orchestration_utils.rs
crates/test_integration/src/runner/: mod.rs  orchestration_utils.rs
crates/test_integration/src/tests/: api_integration.rs  flow.rs  mod.rs  test_album.rs  test_auth.rs  test_download.rs  test_onboarding.rs  test_photos.rs  test_root.rs  test_search.rs  test_timeline.rs
crates/worker/: Cargo.toml
crates/worker/examples/: seed_db.rs
crates/worker/src/: context.rs  ingest_file.rs  jobs.rs  lib.rs  macros.rs  main.rs  ml_analyze_file.rs  queue_logic.rs  remove_file.rs  utils.rs  worker.rs
crates/worker/src/db_helpers/: macros.rs  mod.rs  write_to_db.rs  write_visual_analysis.rs
crates/worker/src/handlers/: analyze.rs  analyze_file.rs  clean_db.rs  ingest.rs  ingest_file.rs  mod.rs  remove.rs  remove_file.rs  scan.rs
crates/worker/src/jobs/: heartbeat.rs  management.rs  mod.rs
(+899 files in other folders)
