[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
common_photos = { path = "../common_photos" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
color-eyre = "0.6.5"
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
argon2 = { version = "0.6.0-rc.1" }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = "0.8.6"
rand = "0.10.0-rc.0"
base64 = "0.22.1"