[package]
name = "photos_core"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }