[package]
name = "photos_core"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
chrono = { version = "0.4.42", features = ["serde"] }
media_analyzer = "0.2.4"
ruurd_photos_thumbnail_generation = "0.1.3"
rand = "0.10.0-rc.0"