[package]
name = "photos_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
photos_core = { path = "../photos_core" }
ruurd_photos_thumbnail_generation = "0.2.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.5.0"
color-eyre = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"