[package]
name = "tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
common_photos = { path = "../common_photos" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.5.0"
color-eyre = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"