[package]
name = "test_integration"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "../apps/api" }
watcher = { path = "../apps/watcher" }
worker = { path = "../apps/worker" }
tasks = { path = "../apps/tasks" }
app_state = { path = "../libs/app_state" }
common_services = { path = "../libs/common_services" }
common_types = { path = "../libs/common_types" }

clap = { version = "4.5.52", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.35.1", features = ["full"] }
color-eyre = "0.6.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros", "json", "uuid"] }
tempfile = "3.9.0"
reqwest = { version = "0.12.24", features = ["json"] }
rand = "0.10.0-rc.5"
url = "2.5.7"