[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
common_photos = { path = "../common_photos" }
media_analyzer = "0.2.3"
ruurd_photos_thumbnail_generation = "0.2.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
tokio = { version = "1.47.1", features = ["full"] }
color-eyre = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"