[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
app_state = { path = "../../libs/app_state" }
common_types = { path = "../../libs/common_types" }
common_services = { path = "../../libs/common_services" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["ansi", "env-filter"] }
color-eyre = "0.6.5"
axum = { version = "0.8.8", features = ["macros", "ws", "http2"] }
tokio = { version = "1.47.1", features = ["full"] }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros", "json", "uuid"] }
serde_json = "1.0.145"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tower-http = { version = "0.6.6", features = ["cors", "limit", "trace", "fs", "set-header", "compression-br", "compression-gzip", "sensitive-headers"] }
mime_guess = "2.0.5"
tokio-util = { version = "0.7.16", features = ["codec"] }
http = "1.3.1"
axum-extra = { version = "0.12.2", features = ["protobuf", "typed-header"] }
reqwest = { version = "0.13.2", features = ["json"] }
tower_governor = { version = "0.8.0" }
serde = { version = "1.0.228", features = ["derive"] }
open_clip_inference = { version = "0.3.0" }
material-color-utils = "0.1.3"

[features]
load-dynamic = ["open_clip_inference/load-dynamic", "common_services/load-dynamic"] # -> Load ONNXRuntime dynamically instead of statically