[package]
name = "tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
common_services = { path = "../../libs/common_services" }
tokio = { version = "1.47.1", features = ["full"] }
color-eyre = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["ansi", "env-filter"] }