[package]
name = "watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
app_state = { path = "../../libs/app_state" }
common_types = { path = "../../libs/common_types" }
common_services = { path = "../../libs/common_services" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros", "json"] }
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
color-eyre = "0.6.5"
notify = "8.2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
walkdir = "2.5.0"