[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
app_state = { path = "../../libs/app_state" }
common_types = { path = "../../libs/common_types" }
common_services = { path = "../../libs/common_services" }
generate_thumbnails = { path = "../../libs/generate_thumbnails" }
ml_analysis = { path = "../../libs/ml_analysis" }
media_analyzer = "0.3.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros", "json", "uuid"] }
tokio = { version = "1.47.1", features = ["full"] }
color-eyre = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
chrono = "0.4.42"
serde_json = "1.0.145"
pgvector = { version = "0.4", features = ["sqlx", "serde"] }
clap = { version = "4.5.48", features = ["derive"] }
walkdir = "2.5.0"
rand = "0.10.0-rc.0"
hdbscan = "0.11.0"
image = "0.25.8"
imageproc = "0.25.0"
ab_glyph = "0.2.32"
async-trait = "0.1.89"
reqwest = "0.12.24"
futures-util = "0.3.31"
sanitize-filename = "0.6.0"
tempfile = "3.10.1"
directories = "6.0.0"
blake3 = "1.8.2"
serde = { version = "1.0.228", features = ["derive"] }