[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
app_state = { path = "../../libs/app_state" }
common_types = { path = "../../libs/common_types" }
common_services = { path = "../../libs/common_services" }
generate_thumbnails = { path = "../../libs/generate_thumbnails" }
ml_analysis = { path = "../../libs/ml_analysis" }
media_analyzer = "0.6.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros", "json", "uuid"] }
tokio = { version = "1.47.1", features = ["full"] }
color-eyre = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = "0.4.42"
serde_json = "1.0.145"
pgvector = { version = "0.4", features = ["sqlx", "serde"] }
clap = { version = "4.5.48", features = ["derive"] }
walkdir = "2.5.0"
rand = "0.10.0-rc.0"
hdbscan = "0.12.0"
image = { version = "0.25.8" }
face_id = "0.4.0"
imageproc = "0.26.0"
ab_glyph = "0.2.32"
reqwest = "0.13.2"
sanitize-filename = "0.6.0"
directories = "6.0.0"
blake3 = "1.8.2"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
itertools = "0.14.0"

[features]
load-dynamic = ["common_services/load-dynamic", "ml_analysis/load-dynamic", "common_types/load-dynamic"] # -> Load ONNXRuntime dynamically instead of statically