[package]
name = "api"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
common_photos = { path = "../../libs/common_photos" }
ml_analysis = { path = "../../libs/ml_analysis" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["ansi", "env-filter"] }
color-eyre = "0.6.5"
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
argon2 = { version = "0.6.0-rc.1" }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros", "json"] }
rand = "0.10.0-rc.0"
base64 = "0.22.1"
serde_json = "1.0.145"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
thiserror = "2.0.17"
tempfile = "3.23.0"
fs2 = "0.4.3"
walkdir = "2.5.0"
fastrand = "2.3.0"
tower-http = { version = "0.6.6", features = ["cors", "limit", "trace", "fs", "set-header", "compression-br", "compression-gzip"] }
mime_guess = "2.0.5"
tokio-util = { version = "0.7.16", features = ["codec"] }
http = "1.3.1"
prost = "0.13.5"
bytes = "1.10.1"
axum-extra = {version =  "0.10.3" , features = ["protobuf"]}

[build-dependencies]
prost-build = "0.13.5"
