[package]
name = "app_state"
version = "0.1.0"
edition = "2024"

[dependencies]
common_types = { path = "../common_types" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
color-eyre = "0.6.5"
dotenv = "0.15.0"
config = "0.15.19"