[package]
name = "common_services"
version = "0.1.0"
edition = "2024"

[dependencies]
common_types = { path = "../../libs/common_types" }
media_analyzer = "0.3.9"
tracing = "0.1.41"
color-eyre = "0.6.5"
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
argon2 = { version = "0.6.0-rc.1" }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros", "json", "uuid"] }
rand = "0.10.0-rc.0"
base64 = "0.22.1"
serde_json = "1.0.145"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
thiserror = "2.0.17"
tempfile = "3.23.0"
fs2 = "0.4.3"
walkdir = "2.5.0"
fastrand = "2.3.0"
mime_guess = "2.0.5"
tokio-util = { version = "0.7.16", features = ["codec"] }
http = "1.3.1"
reqwest = { version = "0.12.24", features = ["json"] }
url = { version = "2.5.7", features = ["serde"] }
bon = "3.8.1"
chrono-tz = "0.10.4"
dotenv = "0.15.0"
config = "0.15.19"
pgvector = { version = "0.4", features = ["sqlx", "serde"] }