[package]
name = "common_services"
version = "0.1.0"
edition = "2024"

[dependencies]
app_state = { path = "../../libs/app_state" }
common_types = { path = "../../libs/common_types" }
media_analyzer = "0.6.1"
tracing = "0.1.41"
color-eyre = "0.6.5"
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
argon2 = { version = "0.6.0-rc.1" }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros", "json", "uuid"] }
rand = "0.10.0-rc.9"
base64 = "0.22.1"
serde_json = "1.0.145"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
thiserror = "2.0.17"
tempfile = "3.23.0"
fs2 = "0.4.3"
walkdir = "2.5.0"
fastrand = "2.3.0"
mime_guess = "2.0.5"
tokio-util = { version = "0.7.16", features = ["codec"] }
http = "1.3.1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
url = { version = "2.5.7", features = ["serde"] }
bon = "3.8.1"
pgvector = { version = "0.4", features = ["sqlx", "serde"] }
futures-util = "0.3.31"
open_clip_inference = { version = "0.2.6", features = ["load-dynamic"] }
kamadak-exif = "0.6.1"
imagesize = "0.14.0"
fast_image_resize = { version = "6.0.0", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }

[dev-dependencies]
criterion = { version = "0.8.0", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "timeline_benchmark"
harness = false