[package]
name = "common_types"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros", "json", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
serde_json = "1.0.145"
prost = "0.14.3"
url = "2.5.7"

[build-dependencies]
prost-build = "0.14.3"
protox = { version = "0.9.1" }