[package]
name = "language_model"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
color-eyre = "0.6.5"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde_json = "1.0.149"
base64 = "0.22.1"
infer = "0.19.0"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
async-stream = "0.3.6"
bon = "3.8.2"
thiserror = "2.0.18"
tokio-util = { version = "0.7.18", features = ["io"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }