[package]
name = "ml_analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
app_state = { path = "../../libs/app_state" }
common_types = { path = "../common_types" }
language_model = { path = "../language_model" }
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
image = { version = "0.25.8" }
palette = "0.7.6"
color-eyre = "0.6.5"
imageproc = { version = "0.26.0" }
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
open_clip_inference = { version = "0.3.0" }
tracing = "0.1.44"
face_id = "0.4.0"
material-color-utils = "0.1.3"

[dev-dependencies]
walkdir = "2.5.0"

[features]
load-dynamic = ["open_clip_inference/load-dynamic", "face_id/load-dynamic", "common_types/load-dynamic"] # -> Load ONNXRuntime dynamically instead of statically